--- a/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
@@ -392,7 +392,7 @@
                                     </td>
                                     <td><h5>Last Edit Name</h5></td>
                                     <td colspan="5">
-                                        @Html.TextBoxFor(o => o.LastEditName, "", new { @readonly = "readonly" })
+                                        <input id="LastEditName" name="LastEditName" readonly="readonly" type="text" value="@Model.LastEditName">
                                     </td>
                                 </tr>
                             </tbody>
