--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -19,9 +19,9 @@
         flex-grow: 2
     }
 
-    .input-group > input:nth-child(2) {
-        flex-grow: 1
-    }
+        .input-group > input:nth-child(2) {
+            flex-grow: 1MockupOven_Detail
+        }
 
     tr.row-name {
         color: black;
