--- a/Quality/Quality/Views/PublicWondow/FtyInventoryList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/FtyInventoryList.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = null;
-    string title = ViewData["Title"] == null ? "TPESupp" : ViewData["Title"].ToString();
+    string title = ViewData["Title"] == null ? "Fty Inventory" : ViewData["Title"].ToString();
     string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
 }
 
