--- a/Quality/Quality/Views/PublicWondow/TestFailMailList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/TestFailMailList.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = null;
-    string title = ViewData["Title"] == null ? "Pass1" : ViewData["Title"].ToString();
+    string title = ViewData["Title"] == null ? "Test Fail Mail" : ViewData["Title"].ToString();
     string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
 
 }
