--- a/Quality/Quality/Views/PublicWondow/PictureList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/PictureList.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = null;
-    string title = ViewData["Title"] == null ? "Pass1" : ViewData["Title"].ToString();
+    string title = ViewData["Title"] == null ? "Picture" : ViewData["Title"].ToString();
     string EditMode = ViewData["EditMode"] == null ? "EditMode" : ViewData["EditMode"].ToString();
 
     string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
@@ -77,8 +77,16 @@
         var base64_After = Convert.ToBase64String(AfterImage);
         var imgSrc_After = String.Format("data:image/webp;base64,{0}", base64_After);
     }
-    <img id="BeforePic" Type="Before" style="width:100%;" src="@imgSrc_Brfore" />
-    <img id="OriBeforePic" style="width:100%;display:none;" src="@imgSrc_Brfore" />
+    @if (BrforeImage[0] != 0)
+    {
+        <img id="BeforePic" Type="Before" style="width:100%;" src="@imgSrc_Brfore" />
+        <img id="OriBeforePic" style="width:100%;display:none;" src="@imgSrc_Brfore" />
+    }
+    else
+    {
+        <img id="BeforePic" Type="Before" style="width:100%;" />
+        <img id="OriBeforePic" style="width:100%;display:none;" />
+    }
 </div>
 <div class="outerDiv">
     <div class="grayDiv">
@@ -86,8 +94,16 @@
         <img id="AfterCam" Type="After" class="OpenCamera pointer" style="height:80%;padding-top:5px" src="~/Image/Icon/Camera.png" />
         <img id="AfterDel" class="pointer" style="height:80%;padding-top:5px" src="~/Image/Icon/Delete.png" />
     </div>
-    <img id="AfterPic" style="width:100%;" src="@imgSrc_After" />
-    <img id="OriAfterPic" style="width:100%;display:none;" src="@imgSrc_After" />
+    @if (AfterImage[0] != 0)
+    {
+        <img id="AfterPic" style="width:100%;" src="@imgSrc_After" />
+        <img id="OriAfterPic" style="width:100%;display:none;" src="@imgSrc_After" />
+    }
+    else
+    {
+        <img id="AfterPic" style="width:100%;" />
+        <img id="OriAfterPic" style="width:100%;display:none;" />
+    }
 
 </div>
 
@@ -101,6 +117,19 @@
     var Name_List = [];
     $(function () {
 
+        // 找出父頁面的照片
+        const CurrentBefore = window.opener.document.querySelector("#TestBeforePicture");
+        const CurrentAfter = window.opener.document.querySelector("#TestAfterPicture");
+
+        //如果父頁面有照片，則顯示父頁面照片，如果沒有則顯示DB的照片
+        if (CurrentBefore.value != '') {
+            var before = document.querySelector("#BeforePic");
+            before.src = 'data:image/webp;base64,' + CurrentBefore.value;
+        }
+        if (CurrentAfter.value != '') {
+            var after = document.querySelector("#AfterPic");
+            after.src = 'data:image/webp;base64,' + CurrentAfter.value;
+        }
 
         // Screenshot Exit
         $('#btnScreenshotExit').on('click', function () {
@@ -135,14 +164,16 @@
 
             // User拍下的圖片
             const Setting = document.querySelector("#BeforePic");
-             
+
+
+            document.querySelector("#BeforePic").removeAttribute('src');
             // 如果User沒拍，則刪除原本的
-            if (Ori == "" || Ori == null || Ori == undefined) {
-                document.querySelector("#BeforePic").removeAttribute('src');
-            }
-            else {
-                Setting.src = Ori.src;
-            }
+            //if (Ori == "" || Ori == null || Ori == undefined) {
+            //    document.querySelector("#BeforePic").removeAttribute('src');
+            //}
+            //else {
+            //    Setting.src = Ori.src;
+            //}
         });
 
         $("#AfterDel").click(function () {
@@ -153,13 +184,14 @@
             // User拍下的圖片
             const Setting = document.querySelector("#AfterPic");
 
+            document.querySelector("#AfterPic").removeAttribute('src');
             // 如果User沒拍，則刪除原本的
-            if (Ori == "" || Ori == null || Ori == undefined) {
-                document.querySelector("#AfterPic").removeAttribute('src');
-            }
-            else {
-                Setting.src = Ori.src;
-            }
+            //if (Ori == "" || Ori == null || Ori == undefined) {
+            //    document.querySelector("#AfterPic").removeAttribute('src');
+            //}
+            //else {
+            //    Setting.src = Ori.src;
+            //}
         });
 
         CamInit();
